# SafePause

./: .gitattributes  .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md  requirements-dev.txt  setup.sh
src/: rosdep.yaml
src/a0509_description/: package.xml  setup.cfg  setup.py
src/a0509_description/launch/: a0509_display.launch.py
src/a0509_description/rviz/: a0509.rviz
src/a0509_description/urdf/: a0509.urdf.xacro
src/bringup/: package.xml  setup.py
src/bringup/launch/: bringup.launch.py
src/dsr_zed_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dsr_zed_moveit_config/config/: chomp_planning.yaml  dsr.srdf  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/dsr_zed_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  start.launch.py  static_virtual_joint_tfs.launch.py
src/dsr_zed_moveit_config/rviz/: expr.rviz  moveit.rviz
src/event_logger/: CMakeLists.txt  package.xml  setup.py
src/event_logger/event_logger/: event_logger.py
src/interrupt_ctrl/: package.xml  setup.cfg  setup.py
src/interrupt_ctrl/interrupt_ctrl/: interrupt_node.py
src/local_space_move_action/: CMakeLists.txt  package.xml
src/local_space_move_action/src/action/: LocalSpaceMove.action
src/local_space_move_action/src/scripts/: move_action_server.py
src/object_approach/: package.xml  setup.cfg  setup.py
src/object_approach/config/: params.yaml
src/object_approach/launch/: start.launch.py
src/object_approach/object_approach/: object_approach_node.py
src/object_filtering/: package.xml  setup.py
src/object_filtering/object_filtering/: filter_node.py
src/perception_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/perception_pkg/config/: example.yaml
src/perception_pkg/include/perception_pkg/: perception_node.hpp
src/perception_pkg/perception_pkg/: perception_node.py
src/perception_pkg/src/: perception_node.cpp
src/planning_scene_loader/: package.xml  setup.cfg  setup.py
src/planning_scene_loader/config/: example.yaml
src/planning_scene_loader/planning_scene_loader/: planning_scene_loader_node.py
src/pmp_a0509_description/: package.xml  setup.cfg  setup.py
src/pmp_a0509_description/launch/: a0509_display.launch.py
src/pmp_a0509_moveit_config/: CMakeLists.txt  package.xml
src/pmp_a0509_moveit_config/config/: ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  sensors_3d.yaml
src/pmp_a0509_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  start.launch.py  static_virtual_joint_tfs.launch.py
src/rosbag2_multirecord/: package.xml  setup.cfg  setup.py
src/rosbag2_multirecord/config/: example.yaml
src/rosbag2_multirecord/launch/: start.launch.py
src/rosbag2_multirecord/rosbag2_multirecord/: coordinator_node.py  rosbag2_recorder_node.py
src/safepause_msgs/: CMakeLists.txt  package.xml
src/safepause_msgs/msg/: BundleIndexEntry.msg  MessageBundleIndex.msg
src/safepause_msgs/srv/: StartRecording.srv
src/training_recorder/: CMakeLists.txt  package.xml
src/training_recorder/config/: collision_objects.yaml
src/training_recorder/include/training_recorder/: recorder_node.hpp  topic_handler.hpp
src/training_recorder/launch/: start.launch.py
src/training_recorder/src/: recorder_node.cpp  recording_controller.cpp  topic_handler.cpp
src/training_recorder/training_recorder/: planning_scene_collision_adder.py
